[gd_scene load_steps=4 format=3 uid="uid://cspgy0hihabqn"]

[ext_resource type="Script" path="res://scenes/ui/main_menu/main_menu_ui.gd" id="1_ygboi"]
[ext_resource type="PackedScene" uid="uid://dyrwvwpgcf5d1" path="res://scenes/ui/AudioButton/audio_button.tscn" id="2_nxoua"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yfxdl"]

[node name="MainMenuUi" type="PanelContainer"]
custom_minimum_size = Vector2(280, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_ygboi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_nxoua")]
layout_mode = 2
text = "PLAY"

[node name="OptionsButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_nxoua")]
layout_mode = 2
text = "OPTIONS"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_yfxdl")

[node name="QuitButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_nxoua")]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
